--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,112 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Guide from "../components/Guide.astro";
-
-export enum Semester {
-    FIRST = "First",
-    SECOND = "Second",
-    SUMMER = "Summer"
-}
-
-export type Program = {
-    code: string;
-    name: string;
-    degree: "B.Sc." | "B.A.";
-}
-
-export type Course = {
-    code: string;
-    name: string;
-    creditHours: number;
-    prerequisites: string[];
-}
-
-export type GuideCourse = {
-    courseId: number;
-    year: number;
-    semester: Semester;
-}
-
-export type StudyPlan = {
-    startAcademicYear: number;
-    duration: number;
-    courses: Record<number, Course>;
-    guideCourses: Record<number, GuideCourse>;
-
-}
-
-const program: Program = {
-    code: "CS",
-    name: "Computer Science",
-    degree: "B.Sc."
-}
-
-const studyPlan: StudyPlan = {
-    startAcademicYear: 2024,
-    duration: 5,
-    courses: {
-        1: {
-            code: "CS116",
-            name: "Computing Fundamentals",
-            creditHours: 3,
-            prerequisites: []
-        },
-        2: {
-            code: "ENG1001",
-            name: "Upper-intermediate English",
-            creditHours: 3,
-            prerequisites: ["CS116"]
-        },
-        3: {
-            code: "MATH203",
-            name: "Applied Mathematics for Engineers",
-            creditHours: 3,
-            prerequisites: ["ENG1001"]
-        },
-        4: {
-            code: "CE441",
-            name: "Microprocessors and Microcomputer Systems",
-            creditHours: 4,
-            prerequisites: ["MATH203"]
-        },
-        5: {
-            code: "CS117",
-            name: "Object-oriented Programming",
-            creditHours: 3,
-            prerequisites: ["CS116"]
-        },
-    },
-    guideCourses: {
-        1: {
-            courseId: 1,
-            year: 1,
-            semester: Semester.FIRST
-        },
-        2: {
-            courseId: 2,
-            year: 1,
-            semester: Semester.FIRST
-        },
-        3: {
-            courseId: 3,
-            year: 2,
-            semester: Semester.SECOND
-        },
-        4: {
-            courseId: 4,
-            year: 3,
-            semester: Semester.FIRST
-        },
-        5: {
-            courseId: 5,
-            year: 2,
-            semester: Semester.FIRST
-        }
-    }
-
-}
 ---
 
 <Layout>
-    <Guide class="text-gray-800" program={program} studyPlan={studyPlan} />
+    <Guide class="text-gray-800" />
 </Layout>
