--- a/src/components/Semester.astro
+++ b/src/components/Semester.astro
@@ -7,16 +7,15 @@ const {semester, semesterCourses} = Astro.props;
 
 const studyPlan = $studyPlan.get();
 if (!studyPlan) return;
-
-const {courses} = studyPlan;
 ---
 
-<div>
-    <h1 class="font-sketch opacity-80 text-center">{semester}</h1>
+<div class="flex flex-col gap-1">
+    <h1 class="font-sketch opacity-60 text-center">{semester}</h1>
     <div class="flex flex-col gap-2">
         {semesterCourses.map((semesterCourse: GuideCourse) => {
-            const course = courses[semesterCourse.course];
+            const course = studyPlan.courses[semesterCourse.course];
             if (!course) return;
+
             return <CourseStickyNote
                     key={course.id}
                     id={course.id}
