--- a/src/components/Year.astro
+++ b/src/components/Year.astro
@@ -7,15 +7,15 @@ const {year, yearCourses} = Astro.props;
 ---
 
 <Layout>
-    <div>
-        <h1 class="font-sketch font-bold text-center">{year}/{year + 1}</h1>
+    <div class="flex flex-col gap-1">
+        <h1 class="font-sketch font-bold text-center text-2xl">{year}/{year + 1}</h1>
         <div class="flex flex-row gap-2">
             {Object.values(SemesterType).map((semester) => {
                 const semesterCourses = yearCourses.filter((c: GuideCourse) =>
                     c.semester === semester.toUpperCase()
                 );
-
                 if (semesterCourses.length === 0) return;
+
                 return <Semester
                         key={semester}
                         semesterCourses={semesterCourses}
