--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,5 +4,7 @@ import Guide from "../components/Guide.astro";
 ---
 
 <Layout>
-    <Guide class="text-gray-800" />
+    <div class="h-screen w-full flex justify-center items-start">
+        <Guide class="text-gray-800" />
+</div>
 </Layout>
